Experimenting with package layout to make import paths cleaner
Right now we publish packages from the root directory and include the
lib directory in the package. This means our imports path becomes

    `@splunk/otel/lib/` instead of `@splunk/otel/`

This is somewhat displeasing. It would be nicer if users could import
from `@splunk/otel` and be able to auto instrument with `node -r
@splunk/otel/instrument` instead of @splunk/otel/lib/instrument`.

This commit copies the package.json into the lib directory as part of
the publish command, CDs into the lib directory and publishes the
package from there.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,16 +13,16 @@ jobs:
           pkg-manager: yarn 
       - run:
           name: Run linter 
-          command: yarn lint 
+          command: make lint 
       - run:
           name: Run tests
-          command: yarn test
+          command: make test
       - run:
           name: Build
-          command: yarn compile 
+          command: make build
       - run:
           name: Pack
-          command: yarn pack
+          command: make pack
       - run:
           name: Copy package to artifacts directory 
           command: mkdir -p dist && cp splunk-otel-v*.tgz dist
@@ -42,7 +42,7 @@ jobs:
           name: Authenticate npm
           command: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > ~/.npmrc
       - run:
-          command: yarn publish 
+          command: make publish 
 
 workflows:
   build: 
