--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "repository": "git@github.com:signalfx/splunk-otel-js.git",
   "author": "Splunk <splunk-oss@splunk.com>",
   "license": "Apache-2.0",
-  "main": "lib/index.js",
-  "types": "lib/index.d.ts",
+  "main": "index.js",
+  "types": "index.d.ts",
   "scripts": {
-    "compile": "tsc --build",
+    "build": "tsc --build",
     "clean": "tsc --build --clean",
     "test": "nyc ts-mocha -p tsconfig.json 'test/**/*.test.ts'",
     "codecov": "nyc report --reporter=json && codecov -f coverage/*.json -p .",
@@ -31,10 +31,9 @@
     "node": ">=8.0.0"
   },
   "files": [
-    "lib/**/*.js",
-    "lib/**/*.js.map",
-    "lib/**/*.d.ts",
-    "doc",
+    "**/*.js",
+    "**/*.js.map",
+    "**/*.d.ts",
     "LICENSE",
     "README.md"
   ],
